filegroup(
    name = "position_control_models",
    srcs = glob([
        "position_control/*.onnx",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velocity_control_models",
    srcs = glob([
        "velocity_control/*.onnx",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "handstand_models",
    srcs = glob([
        "handstand/*.onnx",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "legacy_models",
    srcs = glob([
        "legacy/*.onnx",
    ]),
    visibility = ["//visibility:public"],
)
