"""
    Redundant ROS 2 utilities for command-line interaction.
    These should be accessible from @com_github_mvukov_rules_ros2 but 
    I am not sure what the correct targets are.
"""
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@com_github_mvukov_rules_ros2//ros2:bag.bzl", "ros2_bag")


py_library(
    name = "ros2_cmd",
    srcs = ["ros2_cmd.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@ros2cli",
    ],
)

py_binary(
    name = "ros2_node",
    srcs = ["ros2_node.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":ros2_cmd",
        "@ros2cli//:ros2node",
    ],
)

py_binary(
    name = "ros2_topic",
    srcs = ["ros2_topic.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":ros2_cmd",
        "@ros2cli//:ros2topic",
    ],
)

ros2_bag(
    name = "record",
    args = [
        "record",
        "/lowcmd",
        "/lowstate",
        "-o",
        "state_command_bag",
    ],
    idl_deps = [
        "//src/go2/msgs:unitree_api",
        "//src/go2/msgs:unitree_go",
    ],
)
