"""
    Redundant ROS 2 utilities for command-line interaction.
    These should be accessible from @com_github_mvukov_rules_ros2 but 
    I am not sure what the correct targets are.
"""
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@com_github_mvukov_rules_ros2//ros2:bag.bzl", "ros2_bag")


py_library(
    name = "ros2_cmd",
    srcs = ["ros2_cmd.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@ros2cli",
    ],
)

py_binary(
    name = "node",
    srcs = ["node.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":ros2_cmd",
        "@ros2cli//:ros2node",
        "//src/go2/msgs:py_unitree_api_msgs",
        "//src/go2/msgs:py_unitree_go_msgs",
        "//src/vicon/msgs:py_vicon_receiver_msgs",
    ],
)

py_binary(
    name = "topic",
    srcs = ["topic.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":ros2_cmd",
        "@ros2cli//:ros2topic",
        "//src/go2/msgs:py_unitree_api_msgs",
        "//src/go2/msgs:py_unitree_go_msgs",
        "//src/vicon/msgs:py_vicon_receiver_msgs",
    ],
)

