load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "digit_get_motor_limits",
    srcs = ["digit_get_motor_limits.cc"],
    deps = [
        "//src/digit/lib/utils:constants",
        "//src/digit/lib/utils:utilities",
        "//src/digit/lib/driver:lowlevelapi_driver",
        "//src/digit/msgs:digit_msgs",
        "@ros2_rclcpp//:rclcpp",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
    ],
    visibility = ["//visibility:public"],
)

ros2_cpp_binary(
    name = "digit_get_state",
    srcs = ["digit_get_state.cc"],
    deps = [
        "//src/digit/lib/utils:constants",
        "//src/digit/lib/utils:utilities",
        "//src/digit/lib/driver:lowlevelapi_driver",
        "//src/digit/msgs:digit_msgs",
        "@ros2_rclcpp//:rclcpp",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
    ],
    visibility = ["//visibility:public"],
)
