load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "go2_run_trajectories",
    srcs = ["go2_run_trajectories.cc"],
    data = ["//tests/data:trajectory_data"],
    deps = [
        "//src/go2/lib/utils:constants",
        "//src/go2/lib/utils:containers",
        "//src/go2/lib/utils:utilities",
        "//src/go2/lib/driver:wireless_controller_driver",
        "//src/go2/lib/driver:go2_driver",
        "//src/go2/msgs:unitree_go_msgs",
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rosbag2//:rosbag2_cpp",
        "@ros2_rosbag2//:rosbag2_storage",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    visibility = ["//visibility:public"],
)
