load("@com_github_mvukov_rules_ros2//ros2:bag.bzl", "ros2_bag")
load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_bag(
    name = "record",
    args = [
        "record",
        "/lowcmd",
        "/lowstate",
        "/policy_command",
    ],
    idl_deps = [
        "//src/go2/msgs:unitree_api",
        "//src/go2/msgs:unitree_go",
        "//src/vicon/msgs:vicon_receiver",
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_common_interfaces//:geometry_msgs",
    ],
)

ros2_bag(
    name = "play",
    args = [
        "play",
        "tools/bags",
    ],
    data = [
        "//tools/bags:vicon_data",
        "//tools/bags:robot_data",
    ],
    idl_deps = [
        "//src/go2/msgs:unitree_api",
        "//src/go2/msgs:unitree_go",
        "//src/vicon/msgs:vicon_receiver",
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_common_interfaces//:geometry_msgs",
    ],
)

ros2_cpp_binary(
    name = "parse_bag",
    srcs = ["parse_bag.cc"],
    data = [
        "//tools/bags:data",
    ],
    deps = [
        "//src/go2/lib/utils:constants",
        "//src/go2/msgs:unitree_go_msgs",
        "//src/vicon/msgs:vicon_receiver_msgs",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rcutils//:rcutils",
        "@ros2_rosbag2//:rosbag2_cpp",
        "@ros2_rosbag2//:rosbag2_storage",
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_common_interfaces//:cpp_geometry_msgs",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    visibility = ["//visibility:public"],
)
