load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "ros2_interface_library",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
)

ros2_interface_library(
    name = "unitree_api",
    srcs = ["@unitree_ros2//:unitree_api"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "unitree_go",
    srcs = ["@unitree_ros2//:unitree_go"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cc_unitree_api_msgs",
    deps = [":unitree_api"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cc_unitree_go_msgs",
    deps = [":unitree_go"],
    visibility = ["//visibility:public"],
)

py_ros2_interface_library(
    name = "py_unitree_api_msgs",
    deps = [":unitree_api"],
    visibility = ["//visibility:public"],
)

py_ros2_interface_library(
    name = "py_unitree_go_msgs",
    deps = [":unitree_go"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_api_msgs",
    srcs = ["unitree_api_msgs.h"],
    deps = [
        ":cc_unitree_api_msgs",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_go_msgs",
    srcs = ["unitree_go_msgs.h"],
    deps = [
        ":cc_unitree_go_msgs",
    ],
    visibility = ["//visibility:public"],
)
