load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "ros2_interface_library",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
)

ros2_interface_library(
    name = "unitree_api",
    srcs = ["@unitree_ros2//:unitree_api"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "unitree_hg",
    srcs = ["@unitree_ros2//:unitree_hg"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cc_unitree_api_msgs",
    deps = [":unitree_api"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cc_unitree_hg_msgs",
    deps = [":unitree_hg"],
    visibility = ["//visibility:public"],
)

py_ros2_interface_library(
    name = "py_unitree_api_msgs",
    deps = [":unitree_api"],
    visibility = ["//visibility:public"],
)

py_ros2_interface_library(
    name = "py_unitree_hg_msgs",
    deps = [":unitree_hg"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_api_msgs",
    srcs = ["unitree_api_msgs.h"],
    deps = [
        ":cc_unitree_api_msgs",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_hg_msgs",
    srcs = ["unitree_hg_msgs.h"],
    deps = [
        ":cc_unitree_hg_msgs",
    ],
    visibility = ["//visibility:public"],
)
