load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "ros2_interface_library",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
)

ros2_interface_library(
    name = "vicon_receiver",
    srcs = ["//src/vicon/msgs:Position.msg"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cc_vicon_receiver_msgs",
    deps = [":vicon_receiver"],
    visibility = ["//visibility:public"],
)

py_ros2_interface_library(
    name = "py_vicon_receiver_msgs",
    deps = [":vicon_receiver"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vicon_receiver_msgs",
    srcs = ["vicon_receiver_msgs.h"],
    deps = [
        ":cc_vicon_receiver_msgs",
    ],
    visibility = ["//visibility:public"],
)
