load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_library")

ros2_cpp_library(
    name = "walking_policy",
    srcs = ["walking_policy.cc"],
    hdrs = ["walking_policy.h"],
    deps = [
        "//src/go2/lib/driver:go2_driver",
        "//src/go2/lib/driver:onnx_driver",
        "//src/utils:constants",
        "//src/go2/lib/utils:constants",
        "//src/go2/lib/utils:utilities",
        "//src/go2/msgs:unitree_go_msgs",
        "@eigen//:eigen",
        "@ros2_rclcpp//:rclcpp",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/log:absl_check",
    ],
    visibility = ["//visibility:public"],
)

ros2_cpp_library(
    name = "handstand_policy",
    srcs = ["handstand_policy.cc"],
    hdrs = ["handstand_policy.h"],
    deps = [
        "//src/go2/lib/driver:go2_driver",
        "//src/go2/lib/driver:onnx_driver",
        "//src/utils:constants",
        "//src/go2/lib/utils:constants",
        "//src/go2/lib/utils:utilities",
        "//src/go2/msgs:unitree_go_msgs",
        "@eigen//:eigen",
        "@ros2_rclcpp//:rclcpp",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/log:absl_check",
    ],
    visibility = ["//visibility:public"],
)
